cluster/deprecated/apps/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  parentRefs:
    - name: gateway-external # must match Gateway's metadata.name
      namespace: gateway
      sectionName: https # must match Gateway's listeners[].name
  hostnames:
    - "search.ejsadiarin.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: searxng
          port: 8080
